# meshi-rs

./: .gitignore  Cargo.toml  README.md  terrain.rdb
.github/workflows/: ci.yml  release.yml
archive/physics/: Cargo.toml  mod.rs
audio/: Cargo.toml
audio/examples/: audio_playback.rs
audio/src/: lib.rs
capi/: README.md
compute/: README.md
database/: model.gltf
docs/: koji-double-free.md
editor/: Cargo.toml  README.md
editor/runtime/meshi_app/: CMakeLists.txt  main.cpp
editor/src/: assets.rs  main.rs  render_backend.rs  runtime.rs  terrain.rs  terrain_tri_table.in  ui.rs
editor/src/project/: mod.rs
editor/src/ui/: actions.rs  menu.rs  mod.rs  panels.rs  project_tree.rs
editor/templates/cpp/meshi_app/: CMakeLists.txt
examples/: audio_play.rs  audio_playback.rs  ffi_init.rs  ffi_physics.rs  simple_render.rs
ffi_structs/: Cargo.toml
graphics/: Cargo.toml
graphics/assets/cloud_presets/: cumulus_day.json
graphics/docs/: clouds.md
graphics/examples/: meshi-gfx-gui.rs
graphics/examples/common/: camera.rs  setup.rs
graphics/examples/meshi-billboard/: main.rs
graphics/examples/meshi-cube/: main.rs
graphics/examples/meshi-environment/: main.rs
graphics/examples/meshi-lighting/: main.rs
graphics/examples/meshi-skinned/: main.rs
graphics/examples/meshi-text/: main.rs
graphics/src/: lib.rs  renderer.rs  structs.rs  terrain_loader.rs
graphics/src/gui/: debug.rs  dock.rs  icon_atlas.rs  mod.rs
graphics/src/render/: debug_layer.rs  deferred.rs  gpu_draw_builder.rs  gui.rs  image_pager.rs  mod.rs  particle_system.rs  scene.rs  skinning.rs  text.rs
graphics/src/render/clouds/: cloud_pass_composite.rs  cloud_pass_shadow.rs  cloud_pass_temporal.rs  mod.rs
graphics/src/render/clouds/shaders/: cloud_composite.frag.glsl
graphics/src/render/deferred/: mod.rs  shadow.rs  shadows.rs
graphics/src/render/deferred/shaders/: deferred_combine_frag.slang  deferred_combine_vert.slang  shadow_vert.slang
graphics/src/render/environment/: mod.rs  ocean.rs  terrain.rs
graphics/src/render/environment/clouds/: cloud_assets.rs  cloud_pass_composite.rs  cloud_pass_raymarch.rs  cloud_pass_shadow.rs  cloud_pass_temporal.rs  mod.rs
graphics/src/render/environment/clouds/shaders/: cloud_composite.frag.glsl  cloud_composite.vert.glsl  cloud_raymarch.comp.glsl  cloud_shadow.comp.glsl  cloud_temporal.comp.glsl
graphics/src/render/environment/shaders/: environment_ocean.comp.glsl  environment_ocean.frag.glsl  environment_ocean.vert.glsl  environment_ocean_fft.comp.glsl  environment_ocean_finalize.comp.glsl  environment_ocean_spectrum.comp.glsl  environment_terrain.comp.glsl  environment_terrain.frag.glsl  environment_terrain.vert.glsl  terrain_deferred_frag.slang  terrain_deferred_vert.slang
graphics/src/render/environment/sky/: cloud.rs  mod.rs
graphics/src/render/environment/sky/shaders/: fog_frag.slang  sky_clouds.comp.glsl  sky_frag.slang  sky_vert.slang  skybox_frag.slang  skybox_vert.slang
graphics/src/render/environment/terrain/: mod.rs  settings.rs
graphics/src/render/forward/: mod.rs
graphics/src/render/gui/: mod.rs
graphics/src/render/gui/shaders/: gui_vert.slang
graphics/src/render/shaders/: build_gpu_draws.comp.glsl  build_particle_draws.comp.glsl  debug_layer.comp.glsl  gui_frag.slang  gui_vert.slang  scene_build_draws.comp.glsl  scene_cull.comp.glsl  scene_transform.comp.glsl  skinning.comp.glsl  text_frag.slang  text_vert.slang
graphics/src/render/shadow/: cascaded.rs  mod.rs  spot.rs
graphics/src/render/shadow/shaders/: shadow_frag.slang
graphics/src/render/text/: mod.rs
graphics/src/render/text/shaders/: text_vert.slang
graphics/src/render/utils/: billboard.rs  gpu_draw_builder.rs  mod.rs  pager.rs  scene.rs  skinning.rs
graphics/src/render/utils/shaders/: build_gpu_draws.comp.glsl  scene_transform.comp.glsl
graphics/src/utils/: gpuoption.rs  mod.rs
graphics/tests/: clouds.rs
gui/: Cargo.toml
gui/scripting/: CMakeLists.txt  README.md
meshi-cpp/: .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json
meshi-cpp/cmake/: download_meshi_rs.cmake  meshi_rs.cmake
meshi-cpp/sample_app_dir/database/: db.json
meshi-cpp/sample_app_dir/database/geometry/: animcube.glb  db.json
meshi-cpp/src/: CMakeLists.txt
meshi-cpp/src/api/: CMakeLists.txt
meshi-cpp/src/api/meshi/: backend.hpp  engine.hpp  graphics.hpp  meshi.hpp  physics.hpp  types.hpp  world.hpp
meshi-cpp/src/api/meshi/bits/: action.hpp  error.hpp  event.hpp
meshi-cpp/src/api/meshi/bits/components/: actor_component.hpp  base.hpp  camera_component.hpp  character_controller_component.hpp  cube_mesh_component.hpp  cube_model_component.hpp  directional_light_component.hpp  editor_camera_component.hpp  mesh_component.hpp  model_component.hpp  physics_component.hpp  renderable_component.hpp  third_person_camera_component.hpp
meshi-cpp/src/api/meshi/bits/objects/: actor.hpp  base.hpp  denizen.hpp
meshi-cpp/src/api/meshi/bits/util/: handle.hpp  loader.hpp  result.hpp  slice.hpp
meshi-cpp/src/examples/: CMakeLists.txt  example_helper.hpp
meshi-cpp/src/examples/hello_animation/: CMakeLists.txt  main.cpp
meshi-cpp/src/examples/hello_engine/: CMakeLists.txt  main.cpp
meshi-cpp/src/examples/hello_lighting/: CMakeLists.txt  main.cpp
physics/: Cargo.toml
plugin/: Cargo.toml
plugin/include/meshi/: meshi.h  meshi_types.h
plugin/src/: lib.rs
plugin/tests/: capi_exports.rs
sample_database/: imagery.rdb  terrain.rdb
src/: lib.rs
tests/: audio_playback.rs  audio_state.rs  database.rs  directional_light_render.rs  engine.rs  event.rs  ffi_header_sync.rs  gfx_create_renderable_err.rs  gfx_release.rs  gfx_transform_invalid.rs  graph_backend.rs  mesh_physics.rs  physics_collision.rs  physics_invalid.rs  physics_update.rs  register_mesh_render.rs  release.rs  render_output.rs  render_primitives.rs  scene.rs  scene_fail.rs  scene_render.rs  timer.rs
tools/terrain_editor/: Cargo.toml  README.md
tools/terrain_editor/src/: app.rs  camera.rs  dbgen.rs  main.rs  ui.rs
utils/: Cargo.toml
utils/src/: camera.rs  lib.rs  timer.rs
(+39 files in other folders)
