[package]
name = "meshi"
version = "0.1.0"
edition = "2021"

[dependencies]

glam = { version = "0.29.2", features = ["bytemuck"] }
bytemuck = { version = "1.21.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.0"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
image = "0.24"
fontdue = "0.9.2"
sdl2 = {version = "0.37.0", features = ["bundled", "static-link", "raw-window-handle"]}
#dashi = {path = "/wksp/git/dashi", features = ["dashi-serde"]}
#miso = {path = "/wksp/git/miso"}
dashi = {git = "https://github.com/JordanHendl/dashi", features = ["dashi-serde"]}
koji = {git = "https://github.com/JordanHendl/koji"}
miso = {git = "https://github.com/JordanHendl/miso"}
gltf = "1.4.1"  # For reading glTF files
unzip3 = "1.0.0"
base64 = "0.22.1"

[lib]
crate-type=["cdylib"]
