[package]
name = "meshi"
version = "0.1.0"
edition = "2021"

[dependencies]

glam = { version = "0.29.2", features = ["bytemuck"] }
bytemuck = { version = "1.21.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.0"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
image = "0.24"
fontdue = "0.9.2"
#dashi = {path = "/wksp/git/dashi", features = ["dashi-serde"]}
#miso = {path = "/wksp/git/miso"}
dashi = {git = "https://github.com/JordanHendl/dashi", features = ["dashi-serde"], rev = "b3da472"}
koji = {git = "https://github.com/JordanHendl/koji", rev = "9caeab7"}
gltf = "1.4.1"  # For reading glTF files
unzip3 = "1.0.0"
base64 = "0.22.1"
winit = "0.26"

[dev-dependencies]
tempfile = "3"

[lib]
crate-type=["cdylib", "rlib"]

[[example]]
name = "ffi_init"
path = "examples/ffi_init.rs"

[[example]]
name = "ffi_physics"
path = "examples/ffi_physics.rs"

[[test]]
name = "engine"
path = "tests/engine.rs"
harness = false

[[test]]
name = "event"
path = "tests/event.rs"
harness = false

[[test]]
name = "mesh_physics"
path = "tests/mesh_physics.rs"
harness = false

[[test]]
name = "scene"
path = "tests/scene.rs"
harness = false
