[profile.release]
debug = true

[workspace]
resolver = "3"
members = [
    "plugin",
    "graphics",
    "physics",
    "audio",
    "utils",
    "ffi_structs",
    "editor",
    "tools/terrain_editor",
]

#[package]
#name = "meshi"
#version = "0.1.0"
#edition = "2021"
#
#[dependencies]
#
#glam = { version = "0.29.2", features = ["bytemuck"] }
#bytemuck = { version = "1.21.0", features = ["derive"] }
#tracing = "0.1.41"
#tracing-subscriber = "0.3.0"
#dashi = {version = "0.1.0", git = "https://github.com/JordanHendl/dashi", features = ["dashi-serde"]}
#base64 = "0.22.1"
#winit = "0.26"
#
#[dev-dependencies]
#tempfile = "3"
#serial_test = "3"
#libc = "0.2"
#
#[lib]
#crate-type=["cdylib", "rlib"]
#
#[[example]]
#name = "ffi_init"
#path = "examples/ffi_init.rs"
#
#[[example]]
#name = "ffi_physics"
#path = "examples/ffi_physics.rs"
