[package]
name = "meshi-audio"
version = "0.1.0"
edition = "2021"

[dependencies]

meshi-ffi-structs = {path = "../ffi_structs"}
resource_pool = {git = "https://github.com/JordanHendl/ResourcePool"}
glam = { version = "0.29.2", features = ["bytemuck"] }
bytemuck = { version = "1.21.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.0"
base64 = "0.22.1"
rodio = { version = "0.17" }
#noren = {git = "https://github.com/JordanHendl/noren", rev = "c29f312"}
noren = {git = "https://github.com/JordanHendl/noren"}
#noren = {git = "https://github.com/JordanHendl/noren"}

[dev-dependencies]
tempfile = "3"
serial_test = "3"
libc = "0.2"

[lib]
