[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.29"
egui = "0.29"
glam = "0.29.2"
dashi = { git = "https://github.com/JordanHendl/dashi", features = ["dashi-serde"] }
meshi-graphics = { path = "../graphics" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
