[package]
name = "meshi-graphics"
version = "0.1.0"
edition = "2024"

[dependencies]
meshi-ffi-structs = {path = "../ffi_structs"}
meshi-utils = {path = "../utils"}
resource_pool = {git = "https://github.com/JordanHendl/ResourcePool"}
dashi = {git = "https://github.com/JordanHendl/dashi", features = ["dashi-serde"]}
#noren = {git = "https://github.com/JordanHendl/noren", rev = "c29f312"}
noren = {git = "https://github.com/JordanHendl/noren", rev = "b3041dd"}
bento = {git = "https://github.com/JordanHendl/gohan", rev = "471abe6"}
miso =  {git = "https://github.com/JordanHendl/gohan", rev = "471abe6"}
tare =  {git = "https://github.com/JordanHendl/gohan", rev = "471abe6"}
furikake = {git = "https://github.com/JordanHendl/gohan", rev = "471abe6"}

arrayvec = "0.7.6"
bitflags = "2.10.0"
glam = { version = "0.29.2", features = ["bytemuck"] }
bytemuck = { version = "1.21.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.0"
base64 = "0.22.1"
winit = "0.26"

[features]
cpu_cull_debug = []
