[package]
name = "meshi-graphics"
version = "0.1.0"
edition = "2024"

[dependencies]
meshi-ffi-structs = {path = "../ffi_structs"}
meshi-utils = {path = "../utils"}
resource_pool = {git = "https://github.com/JordanHendl/ResourcePool"}
dashi = {git = "https://github.com/JordanHendl/dashi", features = ["dashi-serde"]}
noren = {git = "https://github.com/JordanHendl/noren"}
bento = {git = "https://github.com/JordanHendl/gohan"}
tare =  {git = "https://github.com/JordanHendl/gohan"}
miso =  {git = "https://github.com/JordanHendl/gohan"}
furikake =  {git = "https://github.com/JordanHendl/gohan"}
image = "0.25.1"
#bento = {path = "C:/Program Files/Git/wksp/git/gohan/bento"}
#miso = {path = "C:/Program Files/Git/wksp/git/gohan/miso"}
#tare = {path = "C:/Program Files/Git/wksp/git/gohan/tare"}
#furikake = {path = "C:/Program Files/Git/wksp/git/gohan/furikake"}
#noren = {path = "C:/Program Files/Git/wksp/git/noren"}

arrayvec = "0.7.6"
bitflags = "2.10.0"
glam = { version = "0.29.2", features = ["bytemuck"] }
bytemuck = { version = "1.21.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.0"
base64 = "0.22.1"
winit = "0.26"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
bumpalo = { version = "3.19.0", features = ["collections"] }
bumpalo-herd = "0.1.2"
crossbeam-queue = "0.3.11"

[features]
cpu_cull_debug = []
