[package]
name = "meshi"
version = "0.1.0"
edition = "2021"

[dependencies]

meshi-ffi-structs = {path = "../ffi_structs"}
meshi-utils = {path = "../utils"}
meshi-physics = {path = "../physics"}
meshi-graphics = {path = "../graphics"}
meshi-audio = {path = "../audio"}
resource_pool = {git = "https://github.com/JordanHendl/ResourcePool"}
glam = { version = "0.29.2", features = ["bytemuck"] }
bytemuck = { version = "1.21.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.0"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
libc = "0.2"

[lib]
crate-type=["cdylib", "rlib"]

#[[example]]
#name = "ffi_init"
#path = "examples/ffi_init.rs"
#
#[[example]]
#name = "ffi_physics"
#path = "examples/ffi_physics.rs"
