[package]
name = "meshi-physics"
version = "0.1.0"
edition = "2021"

[dependencies]

meshi-ffi-structs = {path = "../ffi_structs"}
glam = { version = "0.29.2", features = ["bytemuck"] }
bytemuck = { version = "1.21.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.0"
resource_pool = {git = "https://github.com/JordanHendl/ResourcePool"}
base64 = "0.22.1"
