[package]
name = "terrain-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
dashi = {git = "https://github.com/JordanHendl/dashi", features = ["dashi-serde"]}
noren = {git = "https://github.com/JordanHendl/noren"}
meshi-graphics = { path = "../../graphics" }
meshi-utils = { path = "../../utils" }
meshi-ffi-structs = { path = "../../ffi_structs" }
tracing = "0.1.41"
tracing-subscriber = "0.3.0"
glam = { version = "0.29.2", features = ["bytemuck"] }
